style.css
/*
  ========================================
  Reset
  ========================================
*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

li {
  list-style: none;
}

input:focus,
button:focus {
  outline: none;
}

button {
  border: none;
}

/*
  ========================================
  Custom Setup
  ========================================
*/

:root {
  --main-bg-color: #1b1e25;
  --main-orange-color: #ff8c00;
}

::placeholder {
  color: #626262;
}

button:active {
  cursor: pointer;
  transform: scale(0.95);
}

/*
  ========================================
  Main Styling
  ========================================
*/

body {
  height: 100vh;
  font-family: 'Roboto', sans-serif;
  background: var(--main-bg-color);
  padding: 2rem 1.8rem;
}

body > header {
  margin-bottom: 1rem;

  display: flex;
  align-items: center;
}

body > header h1 {
  color: #fff;
  font-size: 2rem;
}

section {
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

.search-box {
  margin-bottom: 24px;
  display: flex;
}

.search-box form {
  width: 70%;
  margin-right: 15px;
}

.search-box input[name="search-city"] {
  width: 100%;
  height: 44px;
  background: none;
  border: none;
  border-bottom: 2px solid #bdbdbd;
  font-size: 23px;
  font-weight: 500;
  color: #fff;
}

.search-city-btn {
  height: 44px;
  width: 65px;
  background: var(--main-orange-color);
}

.fa-search {
  font-size: 1.3rem;
  color: #fff;
}

/*
  ========================================
  Slider
  ========================================
*/

.convert-switch {
  align-self: flex-end;
}

.switch {
  position: relative;
  display: inline-block;
  width: 57px;
  height: 28px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 28px;
  width: 28px;
  left: 2px;
  background-color: #fff;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #FF8C00;
  opacity: .7;
}

input:focus + .slider {
  box-shadow: 0 0 1px var(--main-orange-color);
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

section main {
  margin-top: 20px;
  flex: 1 0 0;

  display: flex;
  justify-content: center;
}

/*
  ========================================
  City Weather 
  ========================================
*/

.city {
  position: relative;
  background: #fff;
  border-radius: 1rem;

  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem 3rem;  
  margin-bottom: 1.5rem;
}

.city__name {
  align-self: flex-start;
  font-size: 1.5rem;
  color: #53627c;
}

.city__country {
  background: var(--main-orange-color);
  font-size: 0.75rem;
  padding: 0 3px;
  color: #fff;
  border-radius: 1rem;
}

.city__weather {
  position: relative;
  font-weight: bold;
}

.degree {
  font-size: 3rem;
}

.unit {
  font-size: 1.5rem;
  position: absolute;
  top: 0.5rem;
}

.city__icon {
  font-size: 73px;
}

.city__info {
  margin-top: 1rem;
  font-size: 1.25rem;
  font-weight: 600;
  text-transform: uppercase;
  color: #53627c;
}

.city__close {
  cursor: pointer;
  position: absolute;
  top: 1rem;
  right: 1rem;
  height: 20px;
  width: 20px;
  background: #d0d0d0;
  color: #53627c;
  border-radius: 50%;
  text-align: center;

  display: flex;
  justify-content: center;
  align-items: center;
}

.fa-times {
  font-size: 0.75rem;
}

